--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author: Trey Piepmeier
 simple_search: http://google.com/search
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: http://feeds.feedburner.com/SolutionsLog
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
