--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://solutions.trey.cc
 title: Solutions Log
-subtitle: What.
+subtitle: So I only have to figure things out once.
 author: Trey Piepmeier
 simple_search: http://google.com/search
 
