I don't know why the date of that post suddenly changed.
25 was working, now it's 26. :/
Some GMT bullshit.

--- a/source/.htaccess
+++ b/source/.htaccess
@@ -7,5 +7,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !(.*)/$
 RewriteRule ^(.*)$ http://solutions.trey.cc/$1/ [R=301]
 
-# WordPress Feed URL -> FeedBurner
 Redirect 301 /feed/ http://feeds.feedburner.com/SolutionsLog
+Redirect 301 /2009/02/25/installing-getbundles-on-a-fresh-copy-of-textmate/ http://solutions.trey.cc/2009/02/26/installing-getbundles-on-a-fresh-copy-of-textmate/
